# JANUS

./: .gitignore  .pre-commit-config.yaml  404.html  AEOLUS.env  CITATION.cff  CONTRIBUTING.md  ClimateUtilities.py  DummyCoupler.py  GeneralAdiabat.py  GeneralAdiabat_comparison_Ray.py  General_adiabat.py  General_adiabat_plotter.py  INSTALL.md  JANUS.env  MANIFEST.in  MoistAdiabat.ipynb  MoistAdiabat_RayCode.py  README.md  RJAdiabatTest.ipynb  RJAdiabatTest.py  Rayleigh_spectrum_file_inserter.py  SocRadConv.py  SocRadConv_skin.py  SocRadModel.py  SpectrumComponents.py  atmosphere_column.py  bug-notes.txt  clearsocrates.sh  codecov.yml  coupler_utils.py  cp_funcs.py  cp_functions.py  currentlw.dflx  currentlw.hrts  currentlw.nflx  currentlw.uflx  currentsw.dflx  currentsw.hrts  currentsw.nflx  currentsw.sflx  (+29 more)
.github/: copilot-instructions.md
.github/workflows/: docs.yaml  nightly.yml  publish-test-badges.yml  publish.yaml  tests.yaml
.ipynb_checkpoints/: RJAdiabatTest-checkpoint.ipynb
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
docs/: getting_started.md  index.md  proteus-framework.md
docs/Community/: contact.md
docs/Explanations/: model.md  testing.md
docs/How-to/: documentation.md  installation.md  test.md
docs/Reference/: publications.md
docs/Tutorials/: first_run.md
docs/Validation/: cp_funcs.md  dry_adiabat_setup.md  height.md  moist_adjustment_H2O.md  phys.md  solve_pt.md  spectral_planck_surface.md
docs/javascripts/: header-links.js
docs/stylesheets/: footnotes.css
examples/: SocRadConv.py  demo_instellation.py  demo_runaway_greenhouse.py  requirements.txt
getting_started/: index.html
luminosity_tracks/: plot_grid_2d.py
modules/: compute_moist_adiabat.py  dry_adiabat_timestep.py  dry_adjustment.py  find_tropopause.py  init_well_mixed.py  make_inversion.py  moist_adjustment_H2O.py  plot_emission_spectrum.py  plot_flux_balance.py  radconv_solver.py  radcoupler.py  radiative_heating.py  relative_humidity.py  set_stratosphere.py  solve_pt.py  stellar_luminosity.py  water_cloud.py
plotting_tools/: SpectrumComponents.py  mov.sh  mov_KI_tracks.py  plot_atmosphere.py  plot_cff.py  plot_cp_functions.py  plot_flux_balance.py  plot_global.py  plot_interior.py  plot_radiation_limits.py  plot_stacked.py  plot_window_showcase.py  plot_window_showcase_cff.py
rad_trans/: Mk_cmd_AOPP_CLUSTER  Mk_cmd_MAC_APPLESILICON  Mk_cmd_MAC_INTEL  Mk_cmd_TETRALITH_INTEL  README.md  build_code_modified
search/: search_index.json
spectral-files/gen_all/: ch4_o  co_o  h2_o  h2_o.nc  h2o_o  n2n2_m  n2n2_o  n2n2_o.nc  o2o2_o  o2o2_o.nc  pt48  sp_spider  sp_spider_k  testwrite.py  write_sp_spider_3000K_300.py  write_spec_file
spectral-files/gen_all_2020/: H2-H2_CIA_Borysow_combined.cia  h2_o  n2n2_o  n2n2_o.nc  sp_spider  sp_spider_k  write_sp_spider_3000K_300.py  write_spec_file
spectral-files/gen_ch4/: ch4_m  ch4_o  out.txt  sp_spider  sp_spider_k  write_sp_spider_3000K_300.py  write_spec_file
spectral-files/gen_h2+h2o+co2+co_newh2cia/: h2_o  sp_spider  sp_spider_k  write_sp_spider_3000K_300.py  write_spec_file
spectral-files/gen_h2_20000/: h2_o  sp_spider  sp_spider_k  write_sp_spider_3000K_300.py  write_spec_file
spectral-files/gen_o2/: o2o2_m  o2o2_o  o2o2_o.nc  sp_spider  sp_spider_k  write_sp_spider_3000K_300.py  write_spec_file
spectral-files/gen_sp_spider_h2+h2o+co2_3000K_300/: co2_m  co2_o  h2_m  h2_o  h2_o.nc  h2o_m  pt48  pt_cont  sp_spider  sp_spider_3000K_300  sp_spider_3000K_300_k  sp_spider_k
spectral-files/sp_all_2020/: O2-O2_2018b_fixed.cia  ch4_m  o2_o  sp_spider
spectral-files/sp_all_hitemp_lowres/: gen_spec_file  sp_all_hitemp_318-e  sp_all_hitemp_318_k
spectral-files/sp_all_hitran_highres/: fort.4  pt48_reshigh  pt_cont_reslow
spectral-files/sp_all_hitran_lowres/: gen_spec_file  pt48_reshigh  sp_all_318_hitran  sp_all_318_hitran-e  write_sp_all_hitran.py
spectral_files/: codenames.txt
spectral_files/Oak/: sp_exec_sp_b318_HITRAN_a1.sh  sp_gen_script.py
spectral_files/Reach/: comment.txt
spectral_files/make_h2_cia_data/: combine-h2h2.ipynb  myfile.txt
spectral_files/sp_318_hitran_200414/: sp_all_318_hitran  sp_all_318_hitran-e  write_sp_all_hitran_highres.py
spectral_files/sp_318_hitran_200427/: exec_submit.sh  gen_spec_file  hitr_16.err  pt48_reshigh  sp_all_318  submit_sp_gen.sh  write_sp.py
spectral_files/sp_all_2020/: h2_o
spectral_files/sp_all_hitemp_lowres/: sp_all_hitemp_318  write_sp_all_hitemp.py
spectral_files/sp_all_hitran_highres/: gen_spec_file  pt48_reslow  pt_cont_reshigh
spectral_files/sp_all_hitran_lowres/: pt_cont_reshigh
spectral_files/sp_b318_HITRAN_a16/: exec_submit.sh  insert_star_spectrum.sh  sp_b318_HITRAN_a16_F2V_hd128167  sp_b318_HITRAN_a16_M45_ADLeo  sp_exec_sp_b318_HITRAN_a16.sh  sp_gen_script.py  sp_submit_cluster.sh
spectral_files/sp_b318_HITRAN_a16_2203/: sp_gen_script.py
spectral_files/stellar_spectra/: F2V_hd128167.txt  M45_ADLeo.txt  Sun_t1_5Ga_claire_12.txt  Sun_t2_0Ga_claire_12.txt  Sun_t2_5Ga_claire_12.txt  Sun_t3_5Ga_claire_12.txt  (+6 more)
tests/: conftest.py  demo_instellation.py  demo_runaway_greenhouse.py  plot_SocRadConv.py  test_cli.py  test_code.py  test_constants.py  test_instellation.py  test_runaway_greenhouse.py  test_set_socrates_env.py  test_socrates_download.py
tools/: check_file_sizes.sh  check_test_quality.py  clean_spectral_file.py  clearsocrates.sh  compute_wtg.py  demo_complex_greenhouse.py  generate_spectral_file.py  generate_test_badges.py  get_socrates.sh  goldblatt+2013_runaway_curve.csv  kopparapu+2013_runaway_curve.csv  update_coverage_threshold.py  validate_test_structure.sh
utils/: ClimateUtilities.py  GeneralAdiabat.py  ReadSpectralFile.py  SocRadModel.py  StellarSpectrum.py  atmosphere_column.py  cp_funcs.py  find_lcl.py  height.py  phys.py  socrates.py  water_tables.py
(+133 files in other folders)
